# speed-test-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  system_test.sh
client/: Cargo.toml
client/src/: main.rs
config/: client.ini  server.ini
config/testfile/: 1c.ini
config/testfiles/: 1s.ini  2c.ini
server/: Cargo.toml
server/src/: main.rs
src/: config.rs  globals.rs  lib.rs  protocol.rs  streamer.rs  utility.rs
src/client/: mod.rs  protocol.rs  streamer.rs
src/server/: protocol.rs  streamer.rs
tests/: config.rs  utility.rs
